# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo_utils_core"
version = "0.1.0"
description = "Reusable geospatial utility functions for raster and vector data processing"
requires-python = ">=3.8"
authors = [{ name = "LUP" }]
dependencies = [
  "rasterio>=1.3.0,<2.0.0",
  "geopandas>=1.0.0,<2.0.0",
  "numpy>=1.26.1,<2.0.0",
  "shapely>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
# include your src packages; adjust if you use a 'src/' layout
include = ["geo_utils_core*"]
exclude = ["tests*"]
