# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo_utils_core"
version = "1.0"
description = "Reusable geospatial utility functions for raster and vector data processing"
requires-python = ">=3.9"
authors = [{ name = "LUP" }]

dependencies = [
  "numpy>=1.26,<2.0",
  "geopandas>=1.0,<2.0",
  "shapely>=2.0,<3.0",
  "scikit-learn>=1.3,<2.0"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["geo_utils*"]
exclude = ["tests*"]
